# LC3_script_tools

./: .gitignore  CMakeLists.txt  CodeLite.workspace  LC3_tools.project  ReadMe.md  ReadMe.org  clean_build.bash  rebuild_and_test.bash  run_build_and_test.bash
lc3_in_lc3/: dump_to_c_style
lc3sim-c/: CMakeLists.txt  README.md  main.c  types.h  vm.c  vm.h
lc3sim_cpp/: CMakeLists.txt  LICENSE.txt  instr_config.h  instr_converter.h  instr_maker.h  instr_parser.h  lc3sim.cpp  lc3sim.h  main.cpp  os.h  sim_types.h  types.h
lc3tools/: CMakeLists.txt  lc3.def  lc3.f  lc3os.asm  lc3sim.c  lc3sim.h  types.h
lcc-1.3/: CMakeLists.txt
lcc-1.3/cpp/: CMakeLists.txt
lcc-1.3/etc/: CMakeLists.txt
lcc-1.3/lburg/: CMakeLists.txt
lcc-1.3/lc3pp/: CMakeLists.txt
lcc-1.3/lib/: CMakeLists.txt
lcc-1.3/src/: CMakeLists.txt  bind.c  bytecode.c  c.h  dag.c  gen.c  lc3.md  lc3_32bit.md  lc3dtu.md  lc3dtu_32bit.md  lex.c  null.c  ops.h  stmt.c  symbolic.c  token.h  tree.c  types.c
test/: CMakeLists.txt  TestFunc.cmake  correct_obj32_file  correct_obj64w_file  correct_obj_file  default_out  run_regress_test
test/regress/: CMakeLists.txt
test/regress/__asm_test/: test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test_res.c  test_res.c.expected  test_rti.c  test_rti.c.expected
test/regress/c-testsuite/single-exec/: 00046.c  00050.c  00056.c  00132.c.disable  00154.c  00167.c  00168.c  00171.c  00173.c  00175.c  00176.c  00181.c  00182.c  00185.c  00198.c  00212.c  00212.c.expected  00215.c  00217.c  00218.c
test/regress/lc3_in_lc3/: simple_lc3.c
test/regress/lcc_regression/: 0ERROR  array.c.expected  fig14_1.c.expected  fig14_10.c.expected  fig14_10.c.in  fig14_11.c.expected  fig14_2.c.expected  fig15_1.c.expected  fig15_2.c.expected  fig15_3.c.expected  fig15_4.c.expected  fig15_4.c.in  fig16_1.c.expected  fig16_10.c.expected  fig16_10.c.in  fig16_12.c.expected  fig16_13.c.expected  fig16_13.c.in  fig16_14.c.expected  fig16_14.c.in  fig16_4.c.expected  fig16_6.c.expected  fig16_6.c.in  fig16_8.c.expected  fig16_8.c.in  fig16_9.c.expected  fig16_9.c.in  fig17_13.c.expected  fig17_18.c.expected  fig18_1.c.expected  incr.c.expected  sort.c.expected  spill.c.expected  switch.c.disable  switch.c.expected  switch.c.expected1
test/regress/lcc_regression_32bit/: 8q.c  8q.c.expected  array.c  array.c.expected  fig15_1.c  fig15_1.c.expected  fig15_2.c  fig15_2.c.expected  fig15_3.c.expected  fig15_4.c.expected  fig15_4.c.in  fig16_1.c  fig16_1.c.expected  fig16_10.c.expected  fig16_10.c.in  fig16_12.c  fig16_12.c.expected  fig16_13.c  fig16_13.c.expected  fig16_13.c.in  fig16_14.c.expected  fig16_14.c.in  fig16_4.c  fig16_4.c.expected  fig16_6.c.expected  fig16_6.c.in  fig16_8.c.expected  fig16_8.c.in  fig16_9.c.expected  fig16_9.c.in  fig17_13.c.expected  fig17_18.c.expected  fig17_18.c.in  incr.c  incr.c.expected  sort.c  sort.c.expected  spill.c  spill.c.expected  struct.c  (+3 more)
test/regress/stackl_test/: ERRORS  test10.c  test3.c  test3.c.expected  test5.c  test6.c  test8.c  test9.c
test/speed/: CMakeLists.txt
test/speed/math/: test1.c  test1.c.expected  test2.c  test2.c.expected  test3.c  test3.c.expected  test4.c  test4.c.expected  test_and.c  test_and.c.expected  test_div.c  test_div.c.expected  test_div1.c  test_div1.c.expected  test_mul.c  test_mul.c.expected  test_summ.c  test_summ.c.expected  test_xor.c  test_xor.c.expected
test/unit/: CMakeLists.txt  test_lc3sim-c.cpp
test/unit/lc3sim-c/: CMakeLists.txt  test_lc3sim-c.cpp
test/unit/lc3sim_cpp/: CMakeLists.txt  common.cpp  common.h  test_lc3sim_cpp.cpp  test_lc3sim_cpp_instr_converter.cpp  test_lc3sim_cpp_instr_converter.h  test_lc3sim_cpp_instr_converter_16_to_32.cpp  test_lc3sim_cpp_instr_converter_16_to_64.cpp  test_lc3sim_cpp_instr_converter_32_to_16.cpp  test_lc3sim_cpp_instr_maker.cpp  test_lc3sim_cpp_intr_maker.cpp
